import java.util.stream.Collectors

plugins {
    id "com.diffplug.spotless" version "8.4.0" apply false
    id "com.avast.gradle.docker-compose" version "0.17.12"
    id "org.sonarqube" version "3.5.0.2730"
    id "org.jreleaser" version "1.24.0"
    id "org.owasp.dependencycheck" version "12.2.2"
//    id "com.jfrog.artifactory" version "4.18.3"
    id "me.champeau.gradle.jmh" version "0.5.3"
    id 'org.asciidoctor.convert' version '2.4.0'
    id 'idea'
    id 'jacoco-report-aggregation'
}

ext {
    defaultProjectVersion = findProperty('projectVersion') ?: '1.0.0-SNAPSHOT'
}

apply from: "${rootDir}/libraries.gradle"

apply plugin: 'com.diffplug.spotless'

dockerCompose {
    useComposeFiles = ["${rootDir}/docker-compose.yml"]
    projectName = "gear4jtest"
    removeContainers = true
    stopContainers = true
    captureContainersOutput = false
}

spotless {
    format 'rootMisc', {
        target '*.gradle',
            '*.md',
            '.editorconfig',
            '.gitattributes',
            '.gitignore',
            'docker-compose.yml',
            '.github/**/*.md',
            'config/**/*.xml',
            'config/**/*.md',
            'docs/**/*.md'

        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named('check') {
    dependsOn 'spotlessCheck'
}

tasks.register('verifySupplyChainConfiguration') {
    group = 'verification'
    description = 'Checks that dependency locking is enabled and documents dependency verification bootstrap.'
    doLast {
        if (!file('gradle.lockfile').exists()) {
            logger.lifecycle('No root gradle.lockfile found yet. Generate locks with: ./gradlew dependencies --write-locks')
        }
        if (!file('gradle/verification-metadata.xml').exists()) {
            logger.lifecycle('No Gradle dependency verification metadata found yet. Bootstrap with: ./gradlew --write-verification-metadata sha256 help')
        }
    }
}


allprojects {
    apply plugin: 'jacoco'

    dependencyLocking {
        lockAllConfigurations()
    }

    version = rootProject.defaultProjectVersion
    group = 'io.github.gear4jtest'
    description = 'Gear4J Java pipeline orchestration library.'

    repositories {
        mavenCentral()
    }

    jacoco {
        toolVersion = "0.8.14"
    }
}

//artifactoryPublish.skip = true // apply to all projects except the root

ext {
    coreProjects = subprojects
}

dependencies {
    coreProjects.each { jacocoAggregation project(":${it.name}") }
}

configure(project.coreProjects) {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'checkstyle'
    apply plugin: 'com.diffplug.spotless'
//    apply plugin: 'com.jfrog.bintray'
//    apply plugin: 'com.jfrog.artifactory'

    spotless {
        java {
            target 'src/*/java/**/*.java'
            targetExclude 'build/**', '**/generated/**'

            importOrder('java|javax', '', '\\#')
            removeUnusedImports()
            eclipse()
                .configFile(rootProject.file('config/formatter/eclipse-java-formatter.xml'))

            formatAnnotations()
        }

        format 'moduleMisc', {
            target '*.gradle',
                '*.md',
                'src/**/*.xml',
                'src/**/*.xsd',
                'src/**/*.sql',
                'src/**/*.properties',
                'src/**/*.kt',
                'src/**/*.groovy'

            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    checkstyle {
        toolVersion = '10.26.1'
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        configDirectory.set(rootProject.layout.projectDirectory.dir('config/checkstyle'))
    }

    tasks.withType(Checkstyle).configureEach {
        exclude '**/generated/**'
        reports {
            xml.required = true
            html.required = true
        }
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
        options.addBooleanOption('Xdoclint:all,-missing', true)
        options.addBooleanOption('quiet', true)
    }

    tasks.named('check') {
        dependsOn 'spotlessCheck'
    }

    dependencies {
        testImplementation(libraries.junit)
        testImplementation(libraries.assertj)
    }

    sourceSets {
        integrationTest {
            java.srcDir file('src/integrationTest/java')
            resources.srcDir file('src/integrationTest/resources')
            compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
            runtimeClasspath += output + compileClasspath
        }
    }

    configurations {
        integrationTestImplementation.extendsFrom testImplementation
        integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
    }

    test {
        useJUnitPlatform()
    }

    tasks.register('integrationTest', Test) {
        description = 'Runs integration tests requiring external services such as Docker databases.'
        group = 'verification'
        testClassesDirs = sourceSets.integrationTest.output.classesDirs
        classpath = sourceSets.integrationTest.runtimeClasspath
        useJUnitPlatform()
        shouldRunAfter tasks.named('test')
    }

    if (project.name == 'gear4jtest-core') {
        rootProject.dockerCompose.isRequiredBy(tasks.named('integrationTest'))
    }

    jacocoTestReport {
        reports {
            xml.required = true
        }
    }
}

configure(project.coreProjects.stream().filter { !it.name.contains("gradle") }.collect(Collectors.toList())) {
    apply plugin: 'java-library'
    apply plugin: 'me.champeau.gradle.jmh'
    apply from: "${rootDir}/publishing.gradle"

    dependencies {
        implementation(libraries.slf4j)
        implementation(libraries.google)
        implementation(libraries.jackson)

        testImplementation(libraries.junit)
        testImplementation(libraries.assertj)
        testImplementation(libraries.logback)
        testImplementation(libraries.mockito)
        testImplementation(libraries.mockitoJunit)
        testImplementation(libraries.postgresql)
    }

    tasks.withType(JavaCompile) {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
        options.deprecation = true
        options.encoding = 'UTF-8'
        options.compilerArgs += ["-Xlint:unchecked", "-parameters"]
    }

    afterEvaluate {
        jar {
            inputs.property('moduleName', moduleName)
            manifest.attributes(
                'Automatic-Module-Name': moduleName
            )
        }
    }

    test {
        if (project.hasProperty('dumpLambdaProxies')) {
            systemProperty "jdk.internal.lambda.dumpProxyClasses", "${buildDir}/lambda-proxies"
        }
    }
}

configure(project.coreProjects.stream().filter { it.name.contains("gradle") }.collect(Collectors.toList())) {
    apply plugin: 'groovy-gradle-plugin'
}

def allTestCoverageFile = "${rootProject.projectDir}/build/reports/jacoco/report.xml"

sonarqube {
    properties {
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.organization", "gear4jtest"
        property "sonar.projectName", "gear4jtest"
        property "sonar.projectKey", "gear4jtest_gear4jtest"
        property "sonar.links.homepage", "https://github.com/gear4jtest/gear4jtest"
        property "sonar.links.ci", "https://github.com/gear4jtest/gear4jtest/actions"
        property "sonar.links.scm", "https://github.com/gear4jtest/gear4jtest"
        property "sonar.links.issue", "https://github.com/gear4jtest/gear4jtest/issues"
        property "sonar.language", "java"
        property "sonar.coverage.jacoco.xmlReportPaths", allTestCoverageFile
    }
}


jreleaser {
    configFile = file('jreleaser.yml')
}

dependencyCheck {
    failBuildOnCVSS = 9.0
    formats = ['HTML', 'JSON']
    analyzers {
        assemblyEnabled = false
    }
    if (System.getenv('NVD_API_KEY')) {
        nvd {
            apiKey = System.getenv('NVD_API_KEY')
        }
    }
}

tasks.register('stageMavenCentral') {
    group = 'publishing'
    description = 'Stages all Maven publications under build/staging-deploy for JReleaser.'
    dependsOn coreProjects.stream()
            .filter { !it.name.contains('gradle') }
            .map { it.tasks.named('publishAllPublicationsToMavenCentralStagingRepository') }
            .collect(Collectors.toList())
}

task jacocoRootTestReport(type: JacocoReport) {

    coreProjects.each { dependsOn("${it.name}:test") }
    coreProjects.each { dependsOn("${it.name}:jacocoTestReport") }

    additionalSourceDirs.from = coreProjects.sourceSets.main.allSource.srcDirs
    sourceDirectories.from = coreProjects.sourceSets.main.allSource.srcDirs
    classDirectories.from = coreProjects.sourceSets.main.output
    executionData.setFrom coreProjects.collect { testedProject ->
        testedProject.layout.buildDirectory.file('jacoco/test.exec')
    }

    dependsOn subprojects.collect { it.tasks.withType(Javadoc) }

    onlyIf {
        true
    }

    reports {
        xml.required = true
        xml.destination file(allTestCoverageFile)
        html.required = true
        csv.required = false
    }
}

tasks.check.dependsOn tasks.jacocoRootTestReport
tasks.jacocoRootTestReport.dependsOn tasks.test

tasks.register('integrationCheck') {
    group = 'verification'
    description = 'Runs Docker-backed integration tests for every module.'
    dependsOn coreProjects.collect { it.tasks.named('integrationTest') }
}

tasks.register('releaseCheck') {
    group = 'verification'
    description = 'Runs the checks expected before staging a Maven Central release.'
    dependsOn tasks.named('check'), tasks.named('integrationCheck'), tasks.named('dependencyCheckAggregate'), tasks.named('verifySupplyChainConfiguration')
}
